<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.6.RELEASE</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.unind</groupId>
	<artifactId>unind-dependencies</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>unind-dependencies</name>
	<url>http://maven.apache.org</url>

	<organization>
		<name>unind</name>
		<url>http://www.unindaisa.com</url>
	</organization>
	<description>基础依赖版本管理</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- Junit -->
		<spring-mock.version>2.0.8</spring-mock.version>

		<!-- 第三方版本库信息 -->
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven-war-plugin.version>2.2</maven-war-plugin.version>
		<maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
		<maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
		<maven-javadoc-plugin.encoding>UTF-8</maven-javadoc-plugin.encoding>

		<!-- json -->
		<gson.version>2.3.1</gson.version>
		<jackson-core.version>2.7.3</jackson-core.version>
		<jackson-databind.version>2.7.3</jackson-databind.version>
		<jackson-annotations.version>2.7.3</jackson-annotations.version>

		<jcaptcha-all.version>1.0-RC6</jcaptcha-all.version>
		<log4j.version>1.2.17</log4j.version>
		<slf4j-api.version>1.7.12</slf4j-api.version>
		<slf4j-nop.version>1.7.12</slf4j-nop.version>
		<commons-lang3.version>3.3.2</commons-lang3.version>
		<commons-lang.version>2.6</commons-lang.version>
		<poi.version>3.9</poi.version>
		<poi-ooxml.version>3.9</poi-ooxml.version>
		<poi-ooxml-schemas.version>3.9</poi-ooxml-schemas.version>

		<!-- shiro -->
		<shiro-all.version>1.2.3</shiro-all.version>

		<!-- thymeleaf -->
		<unbescape.version>1.1.0.RELEASE</unbescape.version>
		<thymeleaf.version>2.1.4.RELEASE</thymeleaf.version>
		<thymeleaf-spring4.version>2.1.4.RELEASE</thymeleaf-spring4.version>
		<thymeleaf-extras-shiro.version>1.2.1</thymeleaf-extras-shiro.version>

		<!-- spring -->
		<spring-beans.version>4.1.6.RELEASE</spring-beans.version>
		<spring-core.version>4.1.6.RELEASE</spring-core.version>
		<spring-context.version>4.1.6.RELEASE</spring-context.version>
		<spring-web.version>4.1.6.RELEASE</spring-web.version>
		<spring-webmvc.version>4.1.6.RELEASE</spring-webmvc.version>
		<spring-orm.version>4.1.6.RELEASE</spring-orm.version>
		<spring-tx.version>4.1.6.RELEASE</spring-tx.version>
		<spring-test.version>4.1.6.RELEASE</spring-test.version>
		<spring-jdbc.version>4.1.6.RELEASE</spring-jdbc.version>
		<spring-expression.version>4.1.6.RELEASE</spring-expression.version>
		<spring-aop.version>4.1.6.RELEASE</spring-aop.version>
		<spring-context-support.version>4.1.6.RELEASE</spring-context-support.version>
		<spring-data-jpa.version>1.10.1.RELEASE</spring-data-jpa.version>

		<!-- hibernate4 -->
		<hibernate-core.version>4.3.8.Final</hibernate-core.version>
		<hibernate-entitymanager.version>4.3.8.Final</hibernate-entitymanager.version>
		<javassist.version>3.18.1-GA</javassist.version>
		<mybatis.version>3.2.8</mybatis.version>

		<!-- AspectJ -->
		<aspectjrt.version>1.7.4</aspectjrt.version>
		<aspectjweaver.version>1.7.4</aspectjweaver.version>

		<!-- db driver -->
		<mysql-connector-java.version>5.1.34</mysql-connector-java.version>
		<ojdbc14.version>11.2.0.3</ojdbc14.version>
		<sqljdbc4-chs.version>4.0.2206.100</sqljdbc4-chs.version>

		<!-- micniu -->
		<com-micniu.version>0.0.1-SNAPSHOT</com-micniu.version>
		<!-- repositories -->
		<maven-restlet-id>maven-restlet</maven-restlet-id>
		<maven-restlet>http://maven.restlet.com</maven-restlet>

		<!-- activiti -->
		<activiti-bpmn-converter.version>5.21.0</activiti-bpmn-converter.version>
		<activiti-bpmn-model.version>5.21.0</activiti-bpmn-model.version>
		<activiti-common-rest.version>5.21.0</activiti-common-rest.version>
		<activiti-diagram-rest.version>5.21.0</activiti-diagram-rest.version>
		<activiti-engine.version>5.21.0</activiti-engine.version>
		<activiti-json-converter.version>5.21.0</activiti-json-converter.version>
		<activiti-modeler.version>5.21.0</activiti-modeler.version>
		<activiti-rest.version>5.21.0</activiti-rest.version>
		<activiti-spring.version>5.21.0</activiti-spring.version>

		<batik-anim.version>1.7</batik-anim.version>
		<batik-awt-util.version>1.7</batik-awt-util.version>
		<batik-bridge.version>1.7</batik-bridge.version>
		<batik-codec.version>1.7</batik-codec.version>
		<batik-css.version>1.7</batik-css.version>
		<batik-dom.version>1.7</batik-dom.version>
		<batik-ext.version>1.7</batik-ext.version>
		<batik-gvt.version>1.7</batik-gvt.version>
		<batik-js.version>1.7</batik-js.version>
		<batik-parser.version>1.7</batik-parser.version>
		<batik-script.version>1.7</batik-script.version>
		<batik-svg-dom.version>1.7</batik-svg-dom.version>
		<batik-svggen.version>1.7</batik-svggen.version>
		<batik-transcoder.version>1.7</batik-transcoder.version>
		<batik-util.version>1.7</batik-util.version>
		<batik-xml.version>1.7</batik-xml.version>

		<ehcache.version>2.10.1</ehcache.version>
		<org.restlet.version>2.0.15</org.restlet.version>
		<org.restlet.ext.jackson.version>2.0.15</org.restlet.ext.jackson.version>
		<org.restlet.ext.servlet.version>2.0.15</org.restlet.ext.servlet.version>
		<xercesImpl.version>2.11.0</xercesImpl.version>
		<xml-apis-ext.version>1.3.04</xml-apis-ext.version>
		<xmlbeans.version>2.6.0</xmlbeans.version>
		<quartz.version>2.1.7</quartz.version>
		<mongo-java-driver.version>3.2.2</mongo-java-driver.version>
		<springside-core.version>4.2.2.GA</springside-core.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
		</dependency>
		<dependency>
			<groupId>com.octo.captcha</groupId>
			<artifactId>jcaptcha-all</artifactId>
			<version>${jcaptcha-all.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>quartz</artifactId>
					<groupId>quartz</groupId>
				</exclusion>
				<exclusion>
					<artifactId>spring</artifactId>
					<groupId>org.springframework</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-nop</artifactId>
			<version>${slf4j-nop.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>${commons-lang.version}</version>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<!-- shiro -->
			<dependency>
				<groupId>org.apache.shiro</groupId>
				<artifactId>shiro-core</artifactId>
				<version>${shiro-all.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.shiro</groupId>
				<artifactId>shiro-web</artifactId>
				<version>${shiro-all.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.shiro</groupId>
				<artifactId>shiro-ehcache</artifactId>
				<version>${shiro-all.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.shiro</groupId>
				<artifactId>shiro-spring</artifactId>
				<version>${shiro-all.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.shiro</groupId>
				<artifactId>shiro-quartz</artifactId>
				<version>${shiro-all.version}</version>
			</dependency>

			<!-- thymeleaf -->
			<dependency>
				<groupId>org.unbescape</groupId>
				<artifactId>unbescape</artifactId>
				<version>${unbescape.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.theborakompanioni</groupId>
				<artifactId>thymeleaf-extras-shiro</artifactId>
				<version>${thymeleaf-extras-shiro.version}</version>
			</dependency>

			<!-- poi -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>${poi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>${poi-ooxml.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml-schemas</artifactId>
				<version>${poi-ooxml-schemas.version}</version>
			</dependency>

			<!-- db driver -->
			<dependency>
				<groupId>oracle</groupId>
				<artifactId>ojdbc6</artifactId>
				<version>${ojdbc14.version}</version>
			</dependency>
			<dependency>
				<groupId>com.hynnet</groupId>
				<artifactId>sqljdbc4-chs</artifactId>
				<version>${sqljdbc4-chs.version}</version>
			</dependency>

			<!-- http://mvnrepository.com/artifact/org.springframework/spring-mock -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-mock</artifactId>
				<version>${spring-mock.version}</version>
			</dependency>

			<!-- activiti -->
			<dependency>
				<groupId>org.activiti</groupId>
				<artifactId>activiti-bpmn-converter</artifactId>
				<version>${activiti-bpmn-converter.version}</version>
			</dependency>
			<dependency>
				<groupId>org.activiti</groupId>
				<artifactId>activiti-bpmn-model</artifactId>
				<version>${activiti-bpmn-model.version}</version>
			</dependency>
			<dependency>
				<groupId>org.activiti</groupId>
				<artifactId>activiti-common-rest</artifactId>
				<version>${activiti-common-rest.version}</version>
			</dependency>
			<dependency>
				<groupId>org.activiti</groupId>
				<artifactId>activiti-diagram-rest</artifactId>
				<version>${activiti-diagram-rest.version}</version>
			</dependency>
			<dependency>
				<groupId>org.activiti</groupId>
				<artifactId>activiti-engine</artifactId>
				<version>${activiti-engine.version}</version>
			</dependency>
			<dependency>
				<groupId>org.activiti</groupId>
				<artifactId>activiti-json-converter</artifactId>
				<version>${activiti-json-converter.version}</version>
			</dependency>
			<dependency>
				<groupId>org.activiti</groupId>
				<artifactId>activiti-modeler</artifactId>
				<version>${activiti-modeler.version}</version>
			</dependency>
			<dependency>
				<groupId>org.activiti</groupId>
				<artifactId>activiti-rest</artifactId>
				<version>${activiti-rest.version}</version>
			</dependency>
			<dependency>
				<groupId>org.activiti</groupId>
				<artifactId>activiti-spring</artifactId>
				<version>${activiti-spring.version}</version>
			</dependency>


			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-anim</artifactId>
				<version>${batik-anim.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-awt-util</artifactId>
				<version>${batik-awt-util.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-bridge</artifactId>
				<version>${batik-bridge.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-codec</artifactId>
				<version>${batik-codec.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-css</artifactId>
				<version>${batik-css.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-dom</artifactId>
				<version>${batik-dom.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-ext</artifactId>
				<version>${batik-ext.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-gvt</artifactId>
				<version>${batik-gvt.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-js</artifactId>
				<version>${batik-js.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-parser</artifactId>
				<version>${batik-parser.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-script</artifactId>
				<version>${batik-script.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-svg-dom</artifactId>
				<version>${batik-svg-dom.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-svggen</artifactId>
				<version>${batik-svggen.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-transcoder</artifactId>
				<version>${batik-transcoder.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-util</artifactId>
				<version>${batik-util.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlgraphics</groupId>
				<artifactId>batik-xml</artifactId>
				<version>${batik-xml.version}</version>
			</dependency>
			<dependency>
				<groupId>net.sf.ehcache</groupId>
				<artifactId>ehcache</artifactId>
				<version>${ehcache.version}</version>
			</dependency>
			<dependency>
				<groupId>org.restlet.jee</groupId>
				<artifactId>org.restlet</artifactId>
				<version>${org.restlet.version}</version>
			</dependency>
			<dependency>
				<groupId>org.restlet.jee</groupId>
				<artifactId>org.restlet.ext.jackson</artifactId>
				<version>${org.restlet.ext.jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.restlet.jee</groupId>
				<artifactId>org.restlet.ext.servlet</artifactId>
				<version>${org.restlet.ext.servlet.version}</version>
			</dependency>
			<dependency>
				<groupId>xerces</groupId>
				<artifactId>xercesImpl</artifactId>
				<version>${xercesImpl.version}</version>
			</dependency>
			<dependency>
				<groupId>xml-apis</groupId>
				<artifactId>xml-apis-ext</artifactId>
				<version>${xml-apis-ext.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.xmlbeans</groupId>
				<artifactId>xmlbeans</artifactId>
				<version>${xmlbeans.version}</version>
			</dependency>
			<dependency>
				<groupId>org.quartz-scheduler</groupId>
				<artifactId>quartz</artifactId>
				<version>${quartz.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springside</groupId>
				<artifactId>springside-core</artifactId>
				<version>${springside-core.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<repositories>
		<repository>
			<id>${maven-restlet-id}</id>
			<name>Public online Restlet repository</name>
			<url>${maven-restlet}</url>
		</repository>
	</repositories>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${maven-javadoc-plugin.version}</version>
					<configuration>
						<encoding>${maven-javadoc-plugin.encoding}</encoding>
						<!-- jdk1.8 -->
						<additionalparam>-Xdoclint:none</additionalparam>
					</configuration>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
							<configuration>
								<encoding>${maven-javadoc-plugin.encoding}</encoding>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<forkCount>3</forkCount>
						<reuseForks>true</reuseForks>
						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<fork>true</fork>
						<encoding>${project.build.sourceEncoding}</encoding>
					</configuration>
				</plugin>

				<!-- War工程插件 -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>tomcat-maven-plugin</artifactId>
					<configuration>
						<warFile>target/km.war</warFile>
						<server>tomcat</server>
						<url>http://localhost:8081/manager/text</url>
						<path>/test</path>
					</configuration>
					<executions>
						<execution>
							<id>tomcat-deploy</id>
							<phase>deploy</phase>
							<goals>
								<goal>deploy</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<!-- 解决打成war包时无web.xml报错 -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>${maven-war-plugin.version}</version>
					<configuration>
						<failOnMissingWebXml>false</failOnMissingWebXml>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>